# LoopSnos

./: AirBagPage.qml  CMakeLists.txt  CurveAnalysisPage.qml  DataAnalysisPage.qml  Database.qml  EmSocketManager.qml  HomePage.qml  LoopPage.qml  Main.qml  SensorsPage.qml  SnoView.qml  ToastManager.qml  common.js  images.qrc
config/: airbags.json  data.sql  sensors.json
src/: TextFieldDoubleValidator.h  fileio.cpp  highprecisiontimer.cpp  highprecisiontimer.h  main.cpp  qmlemsocket.cpp  syssettings.cpp  syssettings.h
view/: AutoYChartView.qml  GrayLabel.qml  MyInput.qml
